--- a/404-not-found-master/Solution.html
+++ b/404-not-found-master/Solution.html
@@ -7,7 +7,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Baskervville+SC&family=New+Amsterdam&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
    <main>
@@ -18,7 +18,7 @@
        
         <div class="content">
                
-                <img src="Scarecrow.png" alt="Scarecrow">
+                <img src="images/Scarecrow.png" alt="Scarecrow">
         </div>
         <div class="content">
                 <h2 class="content-title">
